# shellcode_run

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  cimain.yml
src/: osdep.h  sc_run.c
src/osdep/: posix.c  win.c
test/: Makefile  sc_hw_linux_x86.asm  sc_hw_linux_x86_64.asm  sc_hw_mac_x86_64.asm
